# chatgpt-conversation-knowledge-exporter

./: .env.example  .gitignore  Changelog.md  Makefile  README.md  pyproject.toml
_sources/: README.md
_sources/ai_conversations/: README.md
_sources/meeting_artifacts/: README.md
apps/: README.md
apps/review-addons/: README.md
apps/review-api/: .gitignore  README.md  pyproject.toml
apps/review-api/src/review_api/: __init__.py  addons.py  bundler.py  main.py  search.py  store.py
apps/review-ui/: README.md  index.html  package-lock.json  package.json
apps/review-ui/src/: App.tsx  index.css  types.ts
apps/review-ui/src/components/: AddonPanel.tsx
apps/review-ui/src/pages/: ConversationDetail.tsx  ReviewQueue.tsx  Search.tsx  TopicDetail.tsx  TopicList.tsx
docs/: ck_exporter-adapters.md  ck_exporter-core.md  ck_exporter-pipeline.md  index.html  metadata.json  module_tree.json  overview.md  review-api.md
docs/temp/dependency_graphs/: chatgpt_conversation_knowledge_exporter_dependency_graph.json
output/: content-pipeline.md  decisions.md  evaluation-quality.md  glossary.md  icp.md  manifest.md  overview.md  pricing-packaging.md  product-prd.md  roadmap.md
prompts/: README.md  schreiber_knowledge_synthesis.md
prompts/shared/: client_context_prompt.md  platform_prompt.md
prompts/workstreams/: competitive_intelligence_prompt.md  finance_standard_cost_prompt.md  helpdesk_mvp_prompt.md  packaging_claims_prompt.md
scripts/: organize_examples.py
src/ck_exporter/: __init__.py  atoms_schema.py  bootstrap.py  cli.py  compile_docs.py  config.py  consolidate.py  embeddings.py  export_schema.py  extract_openai.py  input_normalize.py  linearize.py  logging.py  topic_discovery.py
src/ck_exporter/adapters/: __init__.py  dspy_atom_refiner.py  dspy_lm.py  dspy_topic_labeler.py  fs_jsonl.py  hybrid_atom_extractor.py  openrouter_atom_extractor.py  openrouter_client.py  openrouter_embedder.py  openrouter_llm.py  openrouter_topic_labeler.py
src/ck_exporter/cli/: __init__.py  app.py
src/ck_exporter/cli/commands/: __init__.py  compile.py  consolidate.py  extract.py  linearize.py  run_all.py  topics.py
src/ck_exporter/core/: __init__.py
src/ck_exporter/core/models/: __init__.py  atoms.py  topics.py
src/ck_exporter/core/ports/: __init__.py  atom_extractor.py  embedder.py  llm.py  topic_labeler.py
src/ck_exporter/observability/: __init__.py  dspy_langsmith_callback.py  langsmith.py
src/ck_exporter/pipeline/: __init__.py  action_items.py  assignment.py  atom_converter.py  compile.py  consolidate.py  extract.py  legacy_adapter.py  linearize.py  meeting_metadata.py  topics.py
src/ck_exporter/pipeline/io/: __init__.py  documents.py  load.py  meeting_notes.py  schema_helpers.py
src/ck_exporter/programs/: __init__.py  extraction_prompts.py  json_extract.py
src/ck_exporter/programs/dspy/: __init__.py  extract_meeting_atoms.py  label_topic.py  refine_atoms.py
src/ck_exporter/templates/: adr.md.j2  architecture.md.j2  overview.md.j2
src/ck_exporter/ui/: __init__.py  dashboard.py
src/ck_exporter/utils/: __init__.py  atom_candidates.py  chunking.py
tests/: __init__.py  test_action_items.py  test_chunking.py  test_claude_normalize.py  test_documents.py  test_embeddings_pooling.py  test_input_normalize.py  test_linearize.py  test_meeting_notes.py  test_topic_assignment.py  test_topic_discovery.py
tests/integration/: test_cli_smoke.py  test_pipeline_extract_offline.py  test_pipeline_topics_offline.py
tests/unit/: test_bootstrap.py  test_consolidate.py  test_dspy_atom_refiner.py  test_dspy_topic_labeler.py  test_embeddings_pooling.py  test_hybrid_atom_extractor.py  test_json_extract.py
